--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
   <!-- Category Buttons -->
   <div class="categories">
-    <div class="category-card level">Animation_01</div>
+    <div class="category-card level">Animation</div>
     
   </div>
 
@@ -220,7 +220,7 @@
 
           model.position.y = -0.1;
           model.scale.set(10, 10, 10);
-          model.rotation.set(0, 0.45, 0);
+          model.rotation.set(0, 0.4, 0);
           scene.add(model);
 
           mixer = new THREE.AnimationMixer(model);
